--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.zoneinfo==0.2.1
 bootstrap4==0.1.0
 crispy-bootstrap5==0.7
 Django==4.1.6
+django-cors-headers==3.14.0
 django-crispy-forms==2.0
 django-environ==0.10.0
 django-filter==22.1
